crates/jekko-tui/tests/snapshots/shell_route_snapshots__shell_body_100x30_sidebar.snap
---
source: crates/jekko-tui/tests/shell_route_snapshots.rs
expression: out
---
"──────────────────────────────────────────────────────────                                          "
"▀▀▀▀▀▀██▀▀  ██▀▀▀▀▀▀▀▀  ██    ▄▄▀▀  ██    ▄▄▀▀  ▄▄▀▀▀▀▀▀▄▄                                          "
"      ██    ██▄▄▄▄▄▄    ██▄▄▀▀      ██▄▄▀▀      ██      ██                                          "
"▄▄    ██    ██          ██  ▀▀▄▄    ██  ▀▀▄▄    ██      ██                                          "
"  ▀▀▀▀      ▀▀▀▀▀▀▀▀▀▀  ▀▀      ▀▀  ▀▀      ▀▀    ▀▀▀▀▀▀                                            "
"                                                                                                    "
"                                                                                                    "
"Press Enter to engage                                                                               "
"Type and press Enter to send                                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
