crates/jekko-tui/tests/snapshots/shell_route_snapshots__shell_body_160x40_sidebar.snap
---
source: crates/jekko-tui/tests/shell_route_snapshots.rs
expression: out
---
"──────────────────────────────────────────────────────────                                                          ╭ Fusion ──────────────────────────────────╮"
"▀▀▀▀▀▀██▀▀  ██▀▀▀▀▀▀▀▀  ██    ▄▄▀▀  ██    ▄▄▀▀  ▄▄▀▀▀▀▀▀▄▄                                                          │ Models    0 / 0                          │"
"      ██    ██▄▄▄▄▄▄    ██▄▄▀▀      ██▄▄▀▀      ██      ██                                                          │ Agents    0 / 0                          │"
"▄▄    ██    ██          ██  ▀▀▄▄    ██  ▀▀▄▄    ██      ██                                                          │ Calls           0                        │"
"  ▀▀▀▀      ▀▀▀▀▀▀▀▀▀▀  ▀▀      ▀▀  ▀▀      ▀▀    ▀▀▀▀▀▀                                                            │                                          │"
"                                                                                                                    │ [1] Board  [2] Speed  [3] Vault          │"
"                                                                                                                    │ [4] Limits  [5] Feed  [6] Agents         │"
"Press Enter to engage                                                                                               │ sort: latest                             │"
"Type and press Enter to send                                                                                        │ No runs yet.                             │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │                                          │"
"                                                                                                                    │ 1-6 tabs  j/k nav  Enter detail  ? help  │"
"                                                                                                                    ╰ Loading... ──────────────────────────────╯"
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
