crates/jekko-tui/tests/snapshots/shell_route_snapshots__shell_body_history_tab_120x30.snap
---
source: crates/jekko-tui/tests/shell_route_snapshots.rs
expression: out
---
"──────────────────────────────────────────────────────────                          ╭ History ─────────────────────────╮"
"▀▀▀▀▀▀██▀▀  ██▀▀▀▀▀▀▀▀  ██    ▄▄▀▀  ██    ▄▄▀▀  ▄▄▀▀▀▀▀▀▄▄                          │ No saved sessions yet.           │"
"      ██    ██▄▄▄▄▄▄    ██▄▄▀▀      ██▄▄▀▀      ██      ██                          │                                  │"
"▄▄    ██    ██          ██  ▀▀▄▄    ██  ▀▀▄▄    ██      ██                          │ Start a session to populate this │"
"  ▀▀▀▀      ▀▀▀▀▀▀▀▀▀▀  ▀▀      ▀▀  ▀▀      ▀▀    ▀▀▀▀▀▀                            │ list.                            │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"Press Enter to engage                                                               │                                  │"
"Type and press Enter to send                                                        │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    ╰──────────────────────────────────╯"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
