crates/jekko-tui/tests/snapshots/shell_route_snapshots__shell_body_jankurai_tab_120x30.snap
---
source: crates/jekko-tui/tests/shell_route_snapshots.rs
expression: out
---
"──────────────────────────────────────────────────────────                          ┌ Jankurai — Audit Live ───────────┐"
"▀▀▀▀▀▀██▀▀  ██▀▀▀▀▀▀▀▀  ██    ▄▄▀▀  ██    ▄▄▀▀  ▄▄▀▀▀▀▀▀▄▄                          │Jankurai not installed.           │"
"      ██    ██▄▄▄▄▄▄    ██▄▄▀▀      ██▄▄▀▀      ██      ██                          │                                  │"
"▄▄    ██    ██          ██  ▀▀▄▄    ██  ▀▀▄▄    ██      ██                          │Get it:                           │"
"  ▀▀▀▀      ▀▀▀▀▀▀▀▀▀▀  ▀▀      ▀▀  ▀▀      ▀▀    ▀▀▀▀▀▀                            │https://github.com/neverhuman/jank│"
"                                                                                    │                                  │"
"                                                                                    │Then run /audit to start.         │"
"Press Enter to engage                                                               │                                  │"
"Type and press Enter to send                                                        │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    │                                  │"
"                                                                                    └──────────────────────────────────┘"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
