crates/jekko-tui/tests/snapshots/shell_route_snapshots__shell_body_multiturn_160x40.snap
---
source: crates/jekko-tui/tests/shell_route_snapshots.rs
expression: out
---
"╭ Reasoning ──────────────────────────────────────────────────────────────────────────────────────────────────────╮ ╭ Fusion ──────────────────────────────────╮"
"│ > you                                                                                                           │ │ Models    0 / 0                          │"
"│   Explain Rust lifetimes.                                                                                       │ │ Agents    0 / 0                          │"
"│ ◆ Jekko · mock                                                                                                  │ │ Calls           0                        │"
"│   Rust lifetimes ensure references never outlive the data they point to. The borrow checker enforces this at    │ │                                          │"
"│ > you                                                                                                           │ │ [1] Board  [2] Speed  [3] Vault          │"
"│   Show me an example.                                                                                           │ │ [4] Limits  [5] Feed  [6] Agents         │"
"│ ◆ Jekko · mock                                                                                                  │ │ sort: latest                             │"
"│   fn longest<'a>(x: &'a str, y: &'a str) -> &'a str { if x.len() > y.len() { x } else { y } }                   │ │ No runs yet.                             │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │                                          │"
"│                                                                                                                 │ │ 1-6 tabs  j/k nav  Enter detail  ? help  │"
"╰ idle ───────────────────────────────────────────────────────────────────────────────────────────────────────────╯ ╰ Loading... ──────────────────────────────╯"
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
